--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,6 @@
   <title>Library</title>
 </head>
 <body>
-  <script src="./Index.js"></script>
+  <script src="./Index.js" type="module"></script>
 </body>
 </html>
